--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,16 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score, train_test_split, GridSearchCV\n",
+    "\n",
+    "from pandas.plotting import scatter_matrix\n",
     "from regression_tools.plotting_tools import plot_univariate_smooth\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,17 +28,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Not going to use dates, job-title, role, overall-ratings, location \n",
+    "# Not going to use dates, job-title, role, overall-ratings, location, month\n",
     "# for now\n",
     "\n",
-    "X = amazon_reviews_df[['culture-values-stars', 'career-opportunities-stars', \n",
+    "X = amazon_df[['culture-values-stars', 'career-opportunities-stars', \n",
     "                       'comp-benefit-stars', 'senior-management-stars', 'helpful-count',\n",
-    "                       'is_current_employee', 'year', 'month', 'quarter', 'amazon_earnings_this_quarter']]\n",
-    "y = amazon_reviews_df['work-balance-stars']"
+    "                       'is_current_employee', 'year', 'quarter', 'amazon_earnings_this_quarter']]\n",
+    "y = amazon_df['work-balance-stars']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.33, random_state=0)"
    ]
   },
   {
@@ -43,7 +56,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = scatter_matrix(amaz_reviews_df, alpha=0.2, figsize=(10, 10), diagonal='kde')"
+    "y_pred = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"log loss1 = {log_loss(y_test, rf_1.predict_proba(X_test)[:, 1])}\")\n",
+    "print(f\"accuracy1 = {rf_1.score(X_test, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = scatter_matrix(amazon_df, alpha=0.2, figsize=(10, 10), diagonal='kde')"
    ]
   },
   {
@@ -85,18 +145,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   }
  },
  "nbformat": 4,
