--- a/src/nlp.ipynb
+++ b/src/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,12 @@
     "from nltk import RegexpParser\n",
     "from sklearn.model_selection import cross_val_score, train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import HashingVectorizer"
+    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "\n",
+    "import pickle"
    ]
   },
   {
@@ -1154,40 +1157,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "cv = CountVectorizer(max_features=2000)\n",
-    "X = cv.fit_transform(corpus_pros).toarray()\n"
+    "cv_array = cv.fit_transform(corpus_pros).toarray()\n",
+    "cv_dict = {}\n",
+    "i = 0\n",
+    "for key in cv.vocabulary_:\n",
+    "    cv_dict[\"word_\" + key] = cv_array[:,i]\n",
+    "    i += 1\n",
+    "cv_df = pd.DataFrame(cv_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
+    "non_nlp_df = amazon_df[['culture-values-stars', 'career-opportunities-stars', \n",
+    "                       'comp-benefit-stars', 'senior-management-stars', 'helpful-count',\n",
+    "                       'is_current_employee', 'year', 'quarter', 'amazon_earnings_this_quarter']]\n",
+    "\n",
+    "X = pd.concat([non_nlp_df, cv_df], axis=1)\n",
     "y = amazon_df['work-balance-stars'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hash_vec_pros = HashingVectorizer()\n",
-    "hash_pros_matrix = hash_vec_pros.fit_transform(corpus_pros)"
    ]
   },
   {
@@ -1201,12 +1205,23 @@
     "                                   min_samples_leaf=5,\n",
     "                                   max_depth=3,\n",
     "                                   subsample=0.5)\n",
-    "gbr.fit(X_train, y_train)"
+    "gbr.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('gradient_boosting_regressor.pkl', 'wb') as f:\n",
+    "    # Write the model to a file.\n",
+    "    pickle.dump(gbr, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,13 +1230,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2021331443447323\n"
+     ]
+    }
+   ],
    "source": [
     "mse = mean_squared_error(y_test, y_pred)\n",
     "rmse = mse ** 0.5\n",
     "print(rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.to_csv(\"../data/df_with_nlp.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# with open('model.pkl', 'rb') as f:\n",
+    "#     model = pickle.load(f)\n"
    ]
   }
  ],
