--- a/src/preprocessing_code.ipynb
+++ b/src/preprocessing_code.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocessing import create_clean_glassdoor_reviews_csv, create_amazon_reviews_csv"
+    "from preprocessing import preprocessing_clean_glassdoor, preprocessing_create_amazon_with_earnings"
    ]
   },
   {
@@ -18,20 +18,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_clean_glassdoor_reviews_csv()"
+    "preprocessing_clean_glassdoor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jq\\Documents\\Internal_Sentiment_Towards_Workplace\\src\\preprocessing.py:106: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  amazon_reviews_df['amazon_earnings_this_quarter'] = earnings_list\n",
+      "C:\\Users\\jq\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    }
+   ],
+   "source": [
+    "preprocessing_create_amazon_with_earnings('../data/clean_glassdoor_reviews.csv', '../data/amazon_quarterly_earnings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_amazon_reviews_csv('../data/clean_glassdoor_reviews.csv', '../data/amazon_quarterly_earnings.csv')"
+    "\n",
+    "from preprocessing import preprocessing_nlp\n",
+    "\n",
+    "preprocessing_nlp(\"../data/clean_amazon_reviews.csv\")"
    ]
   }
  ],
@@ -51,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
