--- a/src/preprocessing_code.ipynb
+++ b/src/preprocessing_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,25 +27,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jq\\Documents\\Internal_Sentiment_Towards_Workplace\\src\\preprocessing.py:106: SettingWithCopyWarning: \n",
+      "C:\\Users\\jq\\Documents\\Internal_Sentiment_Towards_Workplace\\src\\preprocessing.py:102: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  amazon_reviews_df['amazon_earnings_this_quarter'] = earnings_list\n",
+      "C:\\Users\\jq\\Documents\\Internal_Sentiment_Towards_Workplace\\src\\preprocessing.py:103: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  amazon_reviews_df['stock_price'] = stock_list\n",
       "C:\\Users\\jq\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
+      "  self.obj[item] = s\n",
+      "C:\\Users\\jq\\Documents\\Internal_Sentiment_Towards_Workplace\\src\\preprocessing.py:139: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  amazon_reviews_df['incomplete_review'] = incomplete_review\n"
      ]
     }
    ],
@@ -55,15 +67,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jq\\Documents\\Internal_Sentiment_Towards_Workplace\\src\\preprocessing.py:267: FutureWarning: The signature of `Series.to_csv` was aligned to that of `DataFrame.to_csv`, and argument 'header' will change its default value from False to True: please pass an explicit value to suppress this warning.\n",
+      "  amazon_df['work-balance-stars'].to_csv(\"../data/work-balance-stars.csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from preprocessing import preprocessing_nlp\n",
     "\n",
     "preprocessing_nlp(\"../data/clean_amazon_reviews.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
