--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -34,12 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp_df = pd.read_csv('../data/df_with_nlp.csv', index_col=0)\n",
-    "X = nlp_df\n",
-    "# X = X[['culture-values-stars', 'career-opportunities-stars',\n",
-    "#                        'comp-benefit-stars', 'senior-management-stars', 'helpful-count',\n",
-    "#                        'is_current_employee', 'year', 'quarter', 'amazon_earnings_this_quarter', 'timesteps', 'incomplete_review', 'pros_len', 'cons_len']]\n",
-    "y = pd.read_csv(\"../data/work-balance-stars.csv\", header=None, index_col=0).values"
+    "company = \"google\""
    ]
   },
   {
@@ -48,12 +43,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+    "nlp_df = pd.read_csv('../data/df_with_nlp_' + company + '.csv', index_col=0)\n",
+    "X = nlp_df\n",
+    "# X = X[['culture-values-stars', 'career-opportunities-stars',\n",
+    "#                        'comp-benefit-stars', 'senior-management-stars', 'helpful-count',\n",
+    "#                        'is_current_employee', 'year', 'quarter', 'amazon_earnings_this_quarter', 'timesteps', 'incomplete_review', 'pros_len', 'cons_len']]\n",
+    "y = pd.read_csv(\"../data/work-balance-stars_\" + company + \".csv\", header=None, index_col=0).values"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +163,7 @@
        "           oob_score=False, random_state=1, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('models/random_forest_regressor.pkl', 'wb') as f:\n",
+    "with open('models/random_forest_regressor_' + company + '.pkl', 'wb') as f:\n",
     "    # Write the model to a file.\n",
     "    pickle.dump(rf, f)"
    ]
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +208,7 @@
        "       silent=True, subsample=1, verbose=1)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,11 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('models/gradient_boosting_regressor.pkl', 'wb') as f:\n",
+    "with open('models/gradient_boosting_regressor_' + company + '.pkl', 'wb') as f:\n",
     "    # Write the model to a file.\n",
     "    pickle.dump(xgb_model, f)"
    ]
@@ -288,13 +297,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -303,9 +305,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n",
+      "WARNING (theano.configdefaults): g++ not available, if using conda: `conda install m2w64-toolchain`\n",
+      "C:\\Users\\jq\\Anaconda3\\lib\\site-packages\\theano\\configdefaults.py:560: UserWarning: DeprecationWarning: there is no c++ compiler.This is deprecated and with Theano 0.11 a c++ compiler will be mandatory\n",
+      "  warnings.warn(\"DeprecationWarning: there is no c++ compiler.\"\n",
+      "WARNING (theano.configdefaults): g++ not detected ! Theano will be unable to execute optimized C-implementations (for both CPU and GPU) and will default to Python implementations. Performance will be severely degraded. To remove this warning, set Theano flags cxx to an empty string.\n",
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
@@ -317,38 +332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('models/rnn_model.pkl', 'rb') as f:\n",
-    "    NN_model = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "timesteps=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train = X_train[['culture-values-stars', 'career-opportunities-stars', 'comp-benefit-stars', 'senior-management-stars', \n",
-    "                   'helpful-count', 'is_current_employee', 'year', 'quarter', 'amazon_earnings_this_quarter','timesteps']]\n",
+    "                   'helpful-count', 'is_current_employee', 'year', 'quarter', 'earnings_this_quarter','timesteps']]\n",
     "X_test = X_test[['culture-values-stars', 'career-opportunities-stars', 'comp-benefit-stars', 'senior-management-stars', \n",
-    "                   'helpful-count', 'is_current_employee', 'year', 'quarter', 'amazon_earnings_this_quarter','timesteps']]"
+    "                   'helpful-count', 'is_current_employee', 'year', 'quarter', 'earnings_this_quarter','timesteps']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -358,16 +354,14 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_1 (Dense)              (None, 64)                704       \n",
+      "dense_5 (Dense)              (None, 64)                704       \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 128)               8320      \n",
+      "dense_6 (Dense)              (None, 128)               8320      \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 256)               33024     \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 1)                 257       \n",
+      "dense_7 (Dense)              (None, 1)                 129       \n",
       "=================================================================\n",
-      "Total params: 42,305\n",
-      "Trainable params: 42,305\n",
+      "Total params: 9,153\n",
+      "Trainable params: 9,153\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -382,7 +376,7 @@
     "# The Hidden Layers :\n",
     "NN_model.add(Dense(128, kernel_initializer='normal',activation='relu'))\n",
     "# NN_model.add(Dropout(0.2))\n",
-    "NN_model.add(Dense(256, kernel_initializer='normal',activation='relu'))\n",
+    "# NN_model.add(Dense(256, kernel_initializer='normal',activation='relu'))\n",
     "# The Output Layer :\n",
     "NN_model.add(Dense(1, kernel_initializer='normal',activation='linear'))\n",
     "\n",
@@ -393,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,19 +398,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'callbacks_list' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-29e61918c012>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m NN_model.fit(X_train, y_train, epochs=5, batch_size=64, \n\u001b[1;32m----> 2\u001b[1;33m              validation_data=(X_test, y_test), verbose=2, shuffle=False, callbacks=callbacks_list)\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'callbacks_list' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 6255 samples, validate on 1564 samples\n",
+      "Epoch 1/5\n",
+      " - 124s - loss: 0.9897 - mean_squared_error: 0.9897 - val_loss: 0.9689 - val_mean_squared_error: 0.9689\n",
+      "\n",
+      "Epoch 00001: val_loss did not improve from 0.91672\n",
+      "Epoch 2/5\n",
+      " - 149s - loss: 0.9284 - mean_squared_error: 0.9284 - val_loss: 0.8356 - val_mean_squared_error: 0.8356\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.91672 to 0.83562, saving model to Weights-002--0.83562.hdf5\n",
+      "Epoch 3/5\n",
+      " - 146s - loss: 0.8628 - mean_squared_error: 0.8628 - val_loss: 0.8494 - val_mean_squared_error: 0.8494\n",
+      "\n",
+      "Epoch 00003: val_loss did not improve from 0.83562\n",
+      "Epoch 4/5\n",
+      " - 126s - loss: 0.8493 - mean_squared_error: 0.8493 - val_loss: 0.9827 - val_mean_squared_error: 0.9827\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve from 0.83562\n",
+      "Epoch 5/5\n",
+      " - 125s - loss: 0.8122 - mean_squared_error: 0.8122 - val_loss: 1.0245 - val_mean_squared_error: 1.0245\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 0.83562\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1b51bc2e780>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -426,11 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('models/rnn_model.pkl', 'wb') as f:\n",
+    "with open('models/rnn_model_' + company + '.pkl', 'wb') as f:\n",
     "    # Write the model to a file.\n",
     "    pickle.dump(NN_model, f)"
    ]
