--- a/src/preprocessing_code.ipynb
+++ b/src/preprocessing_code.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocessing import preprocessing_clean_glassdoor, preprocessing_create_amazon_with_earnings"
+    "from preprocessing import preprocessing_clean_glassdoor, preprocessing_create_company_with_earnings"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,13 +39,13 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  amazon_reviews_df['amazon_earnings_this_quarter'] = earnings_list\n",
+      "  company_reviews_df['amazon_earnings_this_quarter'] = pd.Series(earnings_list)\n",
       "C:\\Users\\jq\\Documents\\Internal_Sentiment_Towards_Workplace\\src\\preprocessing.py:103: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  amazon_reviews_df['stock_price'] = stock_list\n",
+      "  company_reviews_df['stock_price'] = pd.Series(stock_list)\n",
       "C:\\Users\\jq\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -57,17 +57,17 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  amazon_reviews_df['incomplete_review'] = incomplete_review\n"
+      "  company_reviews_df['incomplete_review'] = incomplete_review\n"
      ]
     }
    ],
    "source": [
-    "preprocessing_create_amazon_with_earnings('../data/clean_glassdoor_reviews.csv', '../data/amazon_quarterly_earnings.csv')"
+    "preprocessing_create_company_with_earnings('../data/clean_glassdoor_reviews.csv', '../data/google_quarterly_earnings.csv', 'google')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\jq\\Documents\\Internal_Sentiment_Towards_Workplace\\src\\preprocessing.py:267: FutureWarning: The signature of `Series.to_csv` was aligned to that of `DataFrame.to_csv`, and argument 'header' will change its default value from False to True: please pass an explicit value to suppress this warning.\n",
-      "  amazon_df['work-balance-stars'].to_csv(\"../data/work-balance-stars.csv\")\n"
+      "  df['work-balance-stars'].to_csv(\"../data/work-balance-stars_\" + company + \".csv\")\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
     "\n",
     "from preprocessing import preprocessing_nlp\n",
     "\n",
-    "preprocessing_nlp(\"../data/clean_amazon_reviews.csv\")"
+    "preprocessing_nlp(\"../data/clean_google_reviews.csv\", \"google\")"
    ]
   },
   {
